@@ -1,5 +1,12 @@
 2002-06-05  John Levon  <moz@compsoc.man.ac.uk>
 
+	* pp/op_time_options.cpp:
+	* pp/op_time_options.h:
+	* pp/op_to_source_options.h:
+	* pp/oprofpp_options.h: document
+
+2002-06-05  John Levon  <moz@compsoc.man.ac.uk>
+
 	* pp/Makefile.in:
 	* pp/counter_util.h:
 	* pp/counter_util.cpp: move from ...
